--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -721,6 +721,8 @@ source "arch/arm64/kvm/Kconfig"
 
 source "arch/arm64/Kconfig.debug"
 
+source "arch/arm64/hotplug/Kconfig"
+
 source "security/Kconfig"
 
 source "crypto/Kconfig"
