soc: qcom: msm_hotplug v2
Revisited the way big cores are used, as well as how fastlane works, given we
might be running min cpus at more than 1 on big.LITTLE devices (I use 3 on angler).

- respect msm_thermal core restrictions

- hotplug big cores based on big core load instead of linking 50%
   of big cluster to cpu2 and cpu3 (little)

- checks in sysfs interface to refuse invalid values (return EINVAL).

-------------------------------------------------

SysFs interface (/sys/module/msm_hotplug) :

    msm_enabled          : enable/disable hotplugging
                           (rw, 0/1, defaults to 0)

    update_rates         : rate for load calculation
                           (rw, defaults to 200)

    load_levels          : show/update load levels for little core
                           (rw, format "x y z"
                              x = 1-4   = core
                              y = 0-100 = up_threshold
                              z = 0-100 = down_threshold)

    min_cpus_online      : minimum LITTLE cores to keep up at all times
                           (rw, 1-4, defaults to 3 for s810)

    max_cpus_online      : maximum LITTLE cores allowed up at all times when screen on
                           (rw, 1-4, defaults to 4 for s810)

    max_cpus_online_susp : maximum LITTLE cores allowed up at all times when screen off
                           (rw, 1-4, defaults to 4 for s810)

    offline_load         : minimal load to elect a LITTLE core for downing
                           (rw, 0-100, defaults to 0, disabled when 0)

    offline_load_big     : average load of all big cores to reach to remove a big core
                           (rw, 0-100, defaults to 20)

    online_load_big      : average load of all big cores to reach to add an additional big core
                           (rw, 0-100, defaults to 80)

    kick_in_load_big     : average load of all little cores to reach to add first big core
                           (rw, 0-100, de

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -646,6 +646,14 @@ config KERNEL_TEXT_MPU_PROT
 config STATE_NOTIFIER
         bool "State Notifier"
 
+config MSM_HOTPLUG
+	bool "MSM hotplug driver"
+	depends on HOTPLUG_CPU
+	default n
+	help
+	  The MSM hotplug driver controls on-/offlining of additional cores based
+	  on current cpu load.
+
 source "drivers/soc/qcom/memshare/Kconfig"
 
 source "drivers/soc/qcom/lge/Kconfig"
