--- a/arch/arm/boot/dts/qcom/msm8992-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8992-regulator.dtsi
@@ -550,7 +550,7 @@
 			reg = <0x2900 0x100>;
 			regulator-name = "pm8994_s8";
 			regulator-min-microvolt = <640000>;
-			regulator-max-microvolt = <1180000>;
+			regulator-max-microvolt = <1225000>;
 			qcom,cpu-num = <0>;
 		};
 
@@ -605,9 +605,9 @@
 		regulator-name = "apc0_corner";
 		qcom,cpr-fuse-corners = <4>;
 		regulator-min-microvolt = <1>;
-		regulator-max-microvolt = <12>;
+		regulator-max-microvolt = <15>;
 
-		qcom,cpr-voltage-ceiling = <900000 900000 1000000 1180000>;
+		qcom,cpr-voltage-ceiling = <900000 900000 1000000 1225000>;
 		qcom,cpr-voltage-floor =   <640000 700000  800000  850000>;
 		vdd-apc-supply = <&pm8994_s8>;
 
@@ -669,15 +669,17 @@
 		qcom,cpr-init-voltage-ref = <900000 900000 1000000 1230000>;
 		qcom,cpr-init-voltage-step = <10000>;
 
-		qcom,cpr-corner-map = <1 1 2 2 3 3 4 4 4 4 4 4>;
+		qcom,cpr-corner-map = <1 1 2 2 3 3 4 4 4 4 4 4 4 4 4>;
 		qcom,cpr-voltage-ceiling-override =
 				<0xFFFFFFFF 0  800000  800000  900000  900000
 					      1000000 1000000 1115000 1115000
-					      1180000 1180000 1180000 1200000>;
+					      1180000 1180000 1180000 1200000
+					      1200000 1225000 1225000>;
 		qcom,cpr-voltage-floor-override =
 				<0xFFFFFFFF 0  640000  655000  700000  735000
 					       800000  835000  850000  875000
-					       950000 1000000 1000000 1100000>;
+					       950000 1000000 1000000 1100000
+					      1100000 1125000 1150000>;
 		qcom,cpr-fuse-version-map =
 				<0 0xffffffff 0 0 0 0 0>,
 				<0 0xffffffff 1 0 0 0 0>,
@@ -761,10 +763,13 @@
 				<9  1248000000>,
 				<10 1440000000>,
 				<11 1536000000>,
-				<12 1632000000>;
+				<12 1632000000>,
+				<13 1670400000>,
+				<14 1708800000>,
+				<15 1747200000>;
 		qcom,cpr-speed-bin-max-corners =
 				<0 0 2 4 6 9>,
-				<1 0 2 4 6 12>;
+				<1 0 2 4 6 15>;
 		qcom,cpr-enable;
 	};
 
@@ -776,9 +781,9 @@
 		regulator-name = "apc1_corner";
 		qcom,cpr-fuse-corners = <4>;
 		regulator-min-microvolt = <1>;
-		regulator-max-microvolt = <17>;
+		regulator-max-microvolt = <20>;
 
-		qcom,cpr-voltage-ceiling = <900000 900000 1000000 1180000>;
+		qcom,cpr-voltage-ceiling = <900000 900000 1000000 1225000>;
 		qcom,cpr-voltage-floor =   <640000 640000  745000  850000>;
 		vdd-apc-supply = <&pm8994_s11>;
 
@@ -843,19 +848,19 @@
 		qcom,cpr-init-voltage-ref = <900000 900000 1000000 1230000>;
 		qcom,cpr-init-voltage-step = <10000>;
 
-		qcom,cpr-corner-map = <1 2 2 2 2 3 3 3 4 4 4 4 4 4 4 4 4>;
+		qcom,cpr-corner-map = <1 2 2 2 2 3 3 3 4 4 4 4 4 4 4 4 4 4 4 4>;
 		qcom,cpr-voltage-ceiling-override =
 				<0xFFFFFFFF 0  900000  900000  900000  900000
 					       900000 1000000 1000000 1000000
 					      1115000 1115000 1115000 1115000
 					      1115000 1115000 1180000 1180000
-					      1200000>;
+					      1200000 1200000 1225000 1225000>;
 		qcom,cpr-voltage-floor-override =
 				<0xFFFFFFFF 0  640000  640000  665000  690000
 					       735000  745000  770000  785000
 					       850000  860000  880000  900000
 					       920000  935000 1000000 1000000
-					      1100000>;
+					      1100000 1100000 1125000 1150000>;
 		qcom,cpr-fuse-version-map =
 				<0xffffffff 0xffffffff 0 4 4 4 4>,
 				<0xffffffff 0xffffffff 1 4 4 4 4>,
@@ -914,9 +919,12 @@
 				<14 1689600000>,
 				<15 1824000000>,
 				<16 1958400000>,
-				<17 2016000000>;
+				<17 2016000000>,
+				<18 2073000000>,
+				<19 2112000000>,
+				<20 2150400000>;
 		qcom,cpr-speed-bin-max-corners =
-				<0xFFFFFFFF 0 1 5 8 17>;
+				<0xFFFFFFFF 0 1 5 8 20>;
 		qcom,cpr-enable;
 	};
 
