--- a/arch/arm64/configs/lineageos_bullhead_defconfig
+++ b/arch/arm64/configs/lineageos_bullhead_defconfig
@@ -352,6 +352,7 @@ CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_WCD9330_CODEC=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
