Enable ADRENO_IDLER

--- a/arch/arm64/configs/lineageos_bullhead_defconfig
+++ b/arch/arm64/configs/lineageos_bullhead_defconfig
@@ -21,7 +21,13 @@ CONFIG_NAMESPACES=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
+
+
+# Build with -O2 Optimizations
+
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+
+
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
@@ -53,7 +59,6 @@ CONFIG_COMPAT=y
 CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
-CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_PM_RUNTIME=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_CPU_FREQ=y
@@ -353,7 +358,6 @@ CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_WCD9330_CODEC=y
-CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
@@ -678,3 +682,19 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_STRICT_MEMORY_RWX=y
+
+
+
+
+
+
+#####################
+#                   #
+#  Custom Features  #
+#                   #
+#####################
+
+
+CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_ADRENO_IDLER=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
