--- a/arch/arm64/configs/lineageos_bullhead_defconfig
+++ b/arch/arm64/configs/lineageos_bullhead_defconfig
@@ -695,6 +695,11 @@ CONFIG_STRICT_MEMORY_RWX=y
 #####################
 
 
+# Governors
+
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+
+
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
