--- a/arch/arm64/configs/lineageos_bullhead_defconfig
+++ b/arch/arm64/configs/lineageos_bullhead_defconfig
@@ -66,7 +66,7 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_BOOST=y
+CONFIG_CPU_BOOST is not set
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
@@ -700,6 +700,7 @@ CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 
 
+CONFIG_CPU_INPUT_BOOST=y
 CONFIG_WAKE_GESTURES=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
