--- a/arch/arm64/configs/lineageos_bullhead_defconfig
+++ b/arch/arm64/configs/lineageos_bullhead_defconfig
@@ -699,7 +699,7 @@ CONFIG_STRICT_MEMORY_RWX=y
 
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 
-
+CONFIG_DYNAMIC_FSYNC=y
 CONFIG_FINGERPRINT_BOOST=y
 CONFIG_WAKE_GESTURES=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
