--- a/arch/arm64/configs/lineageos_bullhead_defconfig
+++ b/arch/arm64/configs/lineageos_bullhead_defconfig
@@ -699,6 +699,7 @@ CONFIG_STRICT_MEMORY_RWX=y
 
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_CHILL=y
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 
 CONFIG_QUICK_WAKEUP=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
