cpufreq: Introduce CPU wake boost driver
This is a simple driver that boosts all onlines CPUs to their respective
max frequencies when the display is powered on, in order to improve
device-resume performance.

Signed-off-by: Sultan Alsawaf <sultanxda@gmail.com>

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -269,6 +269,7 @@ config CPU_FREQ_GOV_CHILL
 	  'chill' - similar to 'conservative', but optimized for devices
 	  that go into suspended or display off states often.
 
+
 config CPU_FREQ_GOV_INTELLIACTIVE
 	tristate "'intelliactive' cpufreq policy governor"
 	help
@@ -285,6 +286,17 @@ config CPU_FREQ_GOV_INTELLIACTIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
+
+config CPU_WAKE_BOOST
+	bool "CPU wake boost"
+	depends on FB
+	help
+	  Boosts all online CPUs to policy->max (scaling_max_freq) when the display
+	  is powered on, as reported by the framebuffer chain notifier. This helps
+	  make the display power on faster, as well as ensures good performance
+	  immediately after powering on the display.
+
+comment "CPU frequency scaling drivers"
 
 config CPU_BOOST
 	tristate "Event base short term CPU freq boost"
