enable CONFIG_EXFAT_FS

--- a/arch/arm64/configs/lineageos_bullhead_defconfig
+++ b/arch/arm64/configs/lineageos_bullhead_defconfig
@@ -694,6 +694,16 @@ CONFIG_STRICT_MEMORY_RWX=y
 #                   #
 #####################
 
+#exFAT Support
+
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
+# CONFIG_EXFAT_DELAYED_SYNC is not set
+# CONFIG_EXFAT_KERNEL_DEBUG is not set
+# CONFIG_EXFAT_DEBUG_MSG is not set
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+
 
 # Governors
 
