--- a/arch/arm64/configs/lineageos_bullhead_defconfig
+++ b/arch/arm64/configs/lineageos_bullhead_defconfig
@@ -714,6 +714,8 @@ CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 #IO Schedulers
 
 CONFIG_IOSCHED_MAPLE=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
 
 CONFIG_QUICK_WAKEUP=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
