--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -717,6 +717,9 @@ CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
 
+#KSM / UKSM
+CONFIG_KSM=y
+
 CONFIG_QUICK_WAKEUP=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_STATE_NOTIFIER=y
