--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -694,7 +694,19 @@ CONFIG_STRICT_MEMORY_RWX=y
 #                   #
 #####################
 
-#exFAT Support
+
+#Local Version
+CONFIG_LOCALVERSION="-Sphinx 2.7"
+# CONFIG_LOCALVERSION_AUTO is not set
+
+# WireGuard Support
+
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
+
+
+
+# exFAT Support
 
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DISCARD=y
@@ -711,13 +723,13 @@ CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 
-#IO Schedulers
+# IO Schedulers
 
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
 
-#KSM / UKSM
+# KSM / UKSM
 CONFIG_KSM=y
 CONFIG_UKSM=y
 
