--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -704,7 +704,8 @@ CONFIG_LOCALVERSION="-Sphinx 2.7"
 CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
 
-
+#FRANDOM Generator
+CONFIG_FRANDOM=y
 
 # exFAT Support
 
