enable CONFIG_LAZYPLUG

--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -704,7 +704,7 @@ CONFIG_LOCALVERSION="-Sphinx 2.7"
 CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
 
-#FRANDOM Generator
+# FRANDOM Generator
 CONFIG_FRANDOM=y
 
 # exFAT Support
@@ -717,6 +717,8 @@ CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 
+# LAZYPLUG
+CONFIG_LAZYPLUG=y
 
 # Governors
 
