--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -705,7 +705,23 @@ CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
 
 # FRANDOM Generator
+
 CONFIG_FRANDOM=y
+
+# TCP CONG
+
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+
 
 # exFAT Support
 
@@ -718,6 +734,7 @@ CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 
 # LAZYPLUG
+
 CONFIG_LAZYPLUG=y
 
 # Governors
