--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -710,10 +710,13 @@ CONFIG_FRANDOM=y
 
 # TCP CONG
 
+CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_CDG=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_HSTCP=y
 CONFIG_TCP_CONG_HYBLA=y
 CONFIG_TCP_CONG_VEGAS=y
 CONFIG_TCP_CONG_SCALABLE=y
