--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -696,22 +696,18 @@ CONFIG_STRICT_MEMORY_RWX=y
 
 
 # Local Version
-
 CONFIG_LOCALVERSION="-Sphinx-2.7"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 
 # WireGuard Support
-
 CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
 
 # FRANDOM Generator
-
 CONFIG_FRANDOM=y
 
 # TCP CONG
-
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CDG=y
@@ -726,10 +722,9 @@ CONFIG_TCP_CONG_LP=y
 CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
-
+CONFIG_DEFAULT_TCP_CONG="cdg"
 
 # exFAT Support
-
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DISCARD=y
 # CONFIG_EXFAT_DELAYED_SYNC is not set
@@ -739,17 +734,15 @@ CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 
 # LAZYPLUG
-
 CONFIG_LAZYPLUG=y
 
-# Governors
 
+# Governors
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 
 # IO Schedulers
-
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
@@ -758,13 +751,32 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_KSM=y
 CONFIG_UKSM=y
 
+# Quick Wakeup
 CONFIG_QUICK_WAKEUP=y
+
+# Power Efficient Workqueues
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+
+# State Notifier
 CONFIG_STATE_NOTIFIER=y
+
+# Dynamic Fsync
 CONFIG_DYNAMIC_FSYNC=y
+
+# Fingerprint Boost
 CONFIG_FINGERPRINT_BOOST=y
+
+# Wake Gestures
 CONFIG_WAKE_GESTURES=y
+
+# KCAL Advanced Color Control
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+
+# Boeffla Wakelocks
 CONFIG_BOEFFLA_WL_BLOCKER=y
+
+# Adreno Idler
 CONFIG_ADRENO_IDLER=y
+
+# Faux Sound Control
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
