--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -722,6 +722,7 @@ CONFIG_TCP_CONG_LP=y
 CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_DEFAULT_CDG=y
 CONFIG_DEFAULT_TCP_CONG="cdg"
 
 # exFAT Support
