--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -746,12 +746,11 @@ CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 #
 # HOTPLUGS
 #
-
+CONFIG_HIMA_HOTPLUG=y
 
 #
 # CPU Governors
 #
->>>>>>> 6040659... make things tidy in sphinx_defconfig
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
