--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -804,6 +804,11 @@ CONFIG_WAKE_GESTURES=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 #
+# Voltage Control
+#
+CONFIG_VOLTAGE_CONTROL=y
+
+#
 # Boeffla Wakelocks
 #
 CONFIG_BOEFFLA_WL_BLOCKER=y
