enable CONFIG_CPU_WAKE_BOOST

--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -819,6 +819,10 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_ADRENO_IDLER=y
 
 #
+#Wake Boost
+#
+CONFIG_CPU_WAKE_BOOST=y
+#
 # Faux Sound Control
 #
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
