Since i have WAKE_BOOST i disabled FINGERPRINT_BOOST

--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -624,7 +624,6 @@ CONFIG_EXT4_FS_ENCRYPTION=y
 CONFIG_QUOTA=y
 # CONFIG_PRINT_QUOTA_WARNING is not set
 CONFIG_FUSE_FS=y
-CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_SDCARD_FS=y
@@ -795,7 +794,8 @@ CONFIG_DYNAMIC_FSYNC=y
 #
 # Fingerprint Boost
 #
-CONFIG_FINGERPRINT_BOOST=y
+#CONFIG_FINGERPRINT_BOOST is not set
+CONFIG_CPU_WAKE_BOOST=y
 
 #
 # Wake Gestures
@@ -822,10 +822,6 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 #
 CONFIG_ADRENO_IDLER=y
 
-#
-#Wake Boost
-#
-CONFIG_CPU_WAKE_BOOST=y
 #
 # Faux Sound Control
 #
