--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -328,7 +328,9 @@ CONFIG_MSM_ADSPRPC=y
 CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MSM_V2=y
+CONFIG_SLIMBUS=y
 CONFIG_SLIMBUS_MSM_NGD=y
+CONFIG_SLIMBUS_MSM_CTRL=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
 CONFIG_SPMI=y
