--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -816,6 +816,11 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_VOLTAGE_CONTROL=y
 
 #
+# Fastcharge
+#
+CONFIG_FORCE_FAST_CHARGE=y
+
+#
 # Boeffla Wakelocks
 #
 CONFIG_BOEFFLA_WL_BLOCKER=y
