sphinx_defconfig: enable CONFIG_PROCESS_RECLAIM

--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -833,6 +833,11 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 
 #
+# Process Reclaim
+#
+CONFIG_PROCESS_RECLAIM=y
+
+#
 # Adreno Idler
 #
 CONFIG_ADRENO_IDLER=y
