sphinx_defconfig: enable CONFIG_QNS_SYSTEM / Qnovo Charging Interface

--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -838,6 +838,11 @@ CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_PROCESS_RECLAIM=y
 
 #
+# QNOVO
+#
+CONFIG_QNS_SYSTEM=y
+
+#
 # Adreno Idler
 #
 CONFIG_ADRENO_IDLER=y
