sphinx_defconfig: enable CONFIG_POWERSUSPEND

--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -843,6 +843,11 @@ CONFIG_PROCESS_RECLAIM=y
 CONFIG_QNS_SYSTEM=y
 
 #
+# Powersuspend
+#
+CONFIG_POWERSUSPEND=y
+
+#
 # Adreno Idler
 #
 CONFIG_ADRENO_IDLER=y
