sphinx_defconfig: Enable NETFILTER_XT_TARGET_HL

--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -853,6 +853,11 @@ CONFIG_POWERSUSPEND=y
 CONFIG_ADRENO_IDLER=y
 
 #
+#TTL Target
+#
+CONFIG_NETFILTER_XT_TARGET_HL=y
+
+#
 # Faux Sound Control
 #
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
