--- a/arch/arm64/configs/sphinx_defconfig
+++ b/arch/arm64/configs/sphinx_defconfig
@@ -856,6 +856,9 @@ CONFIG_ADRENO_IDLER=y
 #TTL Target
 #
 CONFIG_NETFILTER_XT_TARGET_HL=y
+CONFIG_IP_NF_TARGET_TTL=y
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_IP_NF_MANGLE=y
 
 #
 # Faux Sound Control
